spec/fixtures/modules/error/plans/err.pp
plan error::err {
  fail_plan(Error('oops', 'test/oops', undef, undef, {'some' => 'info'}))
}
